<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.OrderActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/order_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:navigationIcon="@drawable/ic_back_button_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/order_title"
            android:text="@string/order"
            android:textSize="24sp"
            android:textColor="#ffffff"
            android:layout_gravity="center"
            android:textAlignment="center"/>

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/order_name_label"
        android:text="@string/order_name"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/order_toolbar"
        app:layout_constraintBottom_toBottomOf="@id/order_name_text"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/order_name_text"
        android:hint="@string/order_enter_name"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@id/order_name_label"
        app:layout_constraintTop_toBottomOf="@id/order_toolbar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/order_number_label"
        android:text="@string/order_number"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/order_name_text"
        app:layout_constraintBottom_toBottomOf="@id/order_number_text"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/order_number_text"
        android:hint="@string/order_enter_number"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@id/order_number_label"
        app:layout_constraintTop_toBottomOf="@id/order_name_text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/order_email_label"
        android:text="@string/order_email"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/order_number_text"
        app:layout_constraintBottom_toBottomOf="@id/order_email_text"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/order_email_text"
        android:hint="@string/order_enter_email"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@id/order_email_label"
        app:layout_constraintTop_toBottomOf="@id/order_number_text"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/order_radiogroup"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/order_email_text">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/order_collection_radio"
            android:text="@string/order_collection"
            android:textSize="24sp"
            android:checked="true"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/order_delivery_radio"
            android:text="@string/order_delivery"
            android:textSize="24sp"/>

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/order_address1_label"
        android:text="@string/order_address1"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/order_radiogroup"
        app:layout_constraintBottom_toBottomOf="@id/order_address1_text"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/order_address1_text"
        android:hint="@string/order_enter_address"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@id/order_address1_label"
        app:layout_constraintTop_toBottomOf="@id/order_radiogroup"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/order_address2_label"
        android:text="@string/order_address2"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/order_address1_text"
        app:layout_constraintBottom_toBottomOf="@id/order_address2_text"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/order_address2_text"
        android:hint="@string/order_enter_address"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@id/order_address2_label"
        app:layout_constraintTop_toBottomOf="@id/order_address1_text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/order_county_label"
        android:text="@string/order_county"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/order_address2_text"
        app:layout_constraintBottom_toBottomOf="@id/order_county_spinner"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/order_county_spinner"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@id/order_county_label"
        app:layout_constraintTop_toBottomOf="@id/order_address2_text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/order_eircode_label"
        android:text="@string/order_eircode"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/order_county_spinner"
        app:layout_constraintBottom_toBottomOf="@id/order_eircode_text"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/order_eircode_text"
        android:hint="@string/order_enter_eircode"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@id/order_eircode_label"
        app:layout_constraintTop_toBottomOf="@id/order_county_spinner"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/order_form_error"
        android:textSize="24sp"
        android:textColor="#FF0000"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/order_eircode_text"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/order_complete_button"
        android:text="@string/complete_order"
        android:textSize="24sp"
        android:textColor="#ffffff"
        android:background="@drawable/custom_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/order_form_error"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>