<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.CartActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/cart_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cart_title"
            android:textSize="24sp"
            android:textColor="#ffffff"
            android:layout_gravity="center"
            android:textAlignment="center"/>

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/shopping_cart_error"
        android:visibility="invisible"
        android:text="@string/cart_empty"
        android:textSize="24sp"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/cart_holder"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:id="@+id/cart_recycler"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cart_toolbar"
            app:layout_constraintBottom_toTopOf="@id/cart_complete_button"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:orientation="vertical">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cart_complete_button"
                android:text="@string/complete_order"
                android:textSize="24sp"
                android:textColor="#ffffff"
                android:background="@drawable/custom_button"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintTop_toBottomOf="@id/cart_recycler"
                app:layout_constraintBottom_toTopOf="@id/cart_back_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cart_back_button"
                android:text="@string/back_to_browse"
                android:textSize="24sp"
                android:textColor="#ffffff"
                android:background="@drawable/custom_button"
                android:layout_gravity="center"
                app:layout_constraintTop_toBottomOf="@id/cart_complete_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>